sandbox/output
ProfitTest.java:7: error: invalid method declaration; return type required
        assertEquals(1, 1);
        ^
ProfitTest.java:7: error: illegal start of type
        assertEquals(1, 1);
                     ^
ProfitTest.java:7: error: illegal start of type
        assertEquals(1, 1);
                        ^
3 errors
